# RealConsole

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.en.md  README.md  RELEASE_CHECKLIST.md  install.sh  realconsole-r.yaml  realconsole.yaml  uninstall.sh
benches/: intent_matching.rs  memory_search.rs  tool_execution.rs
config/: minimal.yaml  test-memory.yaml
docs/: CHANGELOG.md  README.md
docs/00-core/: philosophy.en.md  philosophy.md  roadmap.en.md  roadmap.md  vision.en.md  vision.md
docs/01-understanding/: README.md
docs/02-practice/: README.md
docs/03-evolution/: README.md  RELEASE-v1.0.0.md
docs/04-reports/: README.md  REORGANIZATION_REPORT_2025-10-16.md  coverage-analysis-phase8-day1-final.md  coverage-analysis-phase8-day1.md  dashboard-alignment-fix.md  llm-call-flow-analysis.md  phase-9.1-week1-context-tracking.md  phase10-progress.md  phase8-day1-agent-testing-progress.md  phase8-day1-day2-final-summary.md  phase8-day1-git-cmd-testing-progress.md  phase8-day2-coverage-data.txt  phase8-day2-coverage-report.md  phase8-day3-4-refactoring-report.md  phase8-day3-code-duplication-analysis.md  phase8-planning-analysis.md  phase8-runtime-bug-fix.md  phase8-shell-execute-improvement.md  phase8-week2-multi-turn-design.md  phase9.2-implementation-plan.md  phase9.2-test-results.md  reorganization-2025-10-16.md  workflow-implementation-summary.md  workflow-integration-complete.md  workflow-integration-plan.md  (+1 more)
examples/: conversation_demo.rs  task_system_usage.md  task_visualization.md  wizard_demo.rs
locales/: en-US.yaml  zh-CN.yaml
scripts/: prepare_publish.sh  test_ctrl_r_demo.sh  test_dashboard.sh  test_error_fixing.sh  test_history_integration.sh  test_shell_execute_demo.sh  test_task_output.sh  test_task_system.sh
src/: advanced_tools.rs  agent.rs  builtin_tools.rs  command.rs  command_router.rs  config.rs  display.rs  error.rs  execution_logger.rs  git_assistant.rs  history.rs  i18n.rs  lib.rs  llm_manager.rs  log_analyzer.rs  main.rs  project_context.rs  repl.rs  shell_executor.rs  spinner.rs  system_monitor.rs  tool.rs  tool_cache.rs  tool_executor.rs
src/dsl/: mod.rs
tests/: test_cli_integration.rs  test_conversation_integration.rs  test_function_calling_e2e.rs  test_intent_integration.rs  test_intent_matching_fix.rs
(+218 files in other folders)
