[package]
name = "realconsole"
version = "1.1.0"
edition = "2021"
authors = ["RealConsole Contributors"]
description = "An intelligent CLI agent with task planning, combining Eastern philosophy wisdom with modern AI"
license = "MIT"

[dependencies]
# CLI & REPL
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Output & UI
colored = "2.1"
dialoguer = "0.11"  # Interactive prompts for config wizard
console = "0.15"    # Terminal manipulation (required by dialoguer)
indicatif = "0.17"  # Progress bars and spinners
unicode-width = "0.1"  # Proper display width calculation for Unicode

# Async runtime (for future HTTP/LLM integration)
tokio = { version = "1.40", features = ["full"] }

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Stream processing
futures = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Utilities
regex = "1.10"
rand = "0.8"
dotenvy = "0.15"  # .env file support
chrono = { version = "0.4.42", features = ["serde"] }
evalexpr = "11.3"  # 安全的数学表达式求值器（活跃维护、现代依赖）
lru = "0.12"  # LRU cache for Intent DSL optimization
hostname = "0.4"  # Get system hostname for advanced tools
once_cell = "1.19"  # Lazy static initialization for regex caching
dirs = "5.0"  # Get user directories (home, config, etc.)
uuid = { version = "1.10", features = ["v4", "serde"] }  # UUID generation for conversation IDs

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"  # Mock HTTP server for testing LLM clients
assert_cmd = "2.0"  # CLI testing
predicates = "3.0"  # Assertions for CLI output
tempfile = "3.8"  # Temporary files for testing
criterion = { version = "0.5", features = ["html_reports"] }  # Performance benchmarking

[lib]
name = "realconsole"
path = "src/lib.rs"

[[bin]]
name = "realconsole"
path = "src/main.rs"

[[bench]]
name = "intent_matching"
harness = false

[[bench]]
name = "tool_execution"
harness = false

[[bench]]
name = "memory_search"
harness = false

# Profile for flamegraph analysis - enable debug symbols
[profile.bench]
debug = true
